iRedMail-1.6.1:
    * Improvements:
        - [Postfix] Bypass more facebook mail server HELOs.
          Thanks damiandabrowski5@GitHub for the contribution.

    * Fixed:
        - SOGo is now disabled on Ubuntu 22.04 due to SOGo team doesn't offer
          binary packages yet.

    * Updated packages:
        + roundcube webmail -> 1.5.3
        + netdata -> 1.35.1

iRedMail-1.6.0:
    * Supports new distribution release:
        + Ubuntu 22.04 LTS (jammy)

    * Improvements:
        - [SOGo] Create SQL VIEW in `vmail` database, so that end users can
          change their own passwords.

    * Updated packages:
        + iRedAdmin -> 1.7
        + netdata -> 1.34.1
        + mlmmjadmin -> 3.1.4

iRedMail-1.5.2:
    * Improvements:
        - Roundcube: Log client IPs by default.

    * Fixed issues:
        - Can not login to SOGo webmail due to small (Nginx) proxy buffer size.
          Thanks to Sysadminfromhell for the report in https://forum.iredmail.org/.
        - [Amavisd] Override @av_scanners_backup settings in other config
          snippet files.
        - [MySQL] Can not remove record which contains non-ascii character
          from table `domain_admins` with unexpected collate.

    * Updated packages:
        + netdata -> 1.33.1.

iRedMail-1.5.1:
    * Updated packages:
        + Roundcube webmail -> 1.5.2.
          Addresses one XSS security fix, also fixes some minor issues.

iRedMail-1.5.0:
    * Supports new distribution releases:
        + OpenBSD 7.0

    * DROPPED distribution release:
        - CentOS 7, CentOS 8. Please use CentOS Stream 8 or Rocky Linux 8 instead.
            - CentOS 7 is too old.
            - CentOS 8 is end-of-life after Dec 31, 2021.
        - Debian 10. Please use Debian 11 instead.
            - Debian 10 enters LTS on July 2022. "Debian LTS is not handled by
              the Debian security team, but by a separate group of volunteers
              and companies interested in making it a success."