@@ -244,7 +244,7 @@
         {
             type = sql;
             id = users;
-            viewURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER_ADDRESS:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_VIEW_AUTH";
+            viewURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER_ADDRESS:PH_SQL_SERVER_PORT/PH_SOGO_VIEW_DB_NAME/PH_SOGO_DB_VIEW_AUTH";
             canAuthenticate = YES;
 
             // The algorithm used for password encryption when changing
@@ -280,7 +280,7 @@
         //    displayName = "Global Address Book";
         //    type = sql;
         //    id = global_address_book;
-        //    viewURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER_ADDRESS:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_VIEW_AUTH";
+        //    viewURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER_ADDRESS:PH_SQL_SERVER_PORT/PH_SOGO_VIEW_DB_NAME/PH_SOGO_DB_VIEW_AUTH";
         //    canAuthenticate = NO;
         //    isAddressBook = YES;
         //    listRequiresDot = NO;
