@@ -4,6 +4,9 @@ iRedMail-1.6.1:
           Thanks damiandabrowski5@GitHub for the contribution.
 
     * Fixed:
+        - Not enable iRedAPD plugin 'sql_ml_access_policy' for SQL backends by
+          default.
+          Thanks Gavin for the feedback.
         - SOGo is now disabled on Ubuntu 22.04 due to SOGo team doesn't offer
           binary packages yet.
 
